--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
                     android:value="com.example.td2.MainActivity" />
         </activity>
         <activity
-                android:name=".PrefsActivity"
+                android:name=".StatusActivity"
                 android:parentActivityName=".MainActivity">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
