--- a/build.gradle
+++ b/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     testImplementation 'junit:junit:4.12'
     implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
